--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -33,7 +33,7 @@
 
         <ul class="form-fields">
             <li>
-                <label>Group</label>
+                <label>Organization</label>
                 <ul class="radio-grid radio-grid--tri">
                     {% for group in groups %}
                         {% set checked = '' %}
