--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -26,7 +26,7 @@
 
         <ul class="form-fields">
             <li>
-                <p>Group</p>
+                <p>Organization</p>
                 <ul class="radio-grid radio-grid--tri">
                 {% for group in groups %}
                     {% set checked = '' %}
