--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -93,9 +93,9 @@
     </p>
     <ol class="list--bullet">
         <li>
-            <strong>Projects belong to groups. Determine what group your application should be part of, or create a new group.</strong>
+            <strong>Projects belong to organizations. Determine what organization your application should be part of, or create a new one.</strong>
             <p>
-                Projects are often grouped by team or business area. You can see the ones that already exist by viewing the <a href="{{ uriFor('applications') }}">Applications page</a>.
+                Projects are often organized by team or business area. You can see the ones that already exist by viewing the <a href="{{ uriFor('applications') }}">Applications page</a>.
             </p>
         </li>
         <li>
