--- a/templates/organization/organization.add.twig
+++ b/templates/organization/organization.add.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
-{% set page_title = 'Add Application Group' %}
+{% set page_title = 'Add Application Organization' %}
 
 {% block content %}
     <h1>{{ page_title }}</h1>
@@ -32,8 +32,8 @@
             </ul>
 
             <ul class="button-list">
-                <li><input class="btn btn--action" type="submit" value="Add Group"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('applications') }}">Cancel</a></li>
+                <li><input class="btn btn--action" type="submit" value="Add Organization"></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('applications') }}">Cancel</a></li>
             </ul>
         </form>
     </div>
