--- a/templates/organization/organization.edit.twig
+++ b/templates/organization/organization.edit.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
-{% set page_title = 'Edit Group : ' ~ group.name %}
+{% set page_title = 'Edit Organization : ' ~ organization.name %}
 
 {% block content %}
-    <h1>Edit Group - <strong>{{ group.name }}</strong></h1>
+    <h1>Edit Organization - <strong>{{ organization.name }}</strong></h1>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
@@ -24,7 +24,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('group', {id: group.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
