--- a/templates/admin/super.cache-management.twig
+++ b/templates/admin/super.cache-management.twig
@@ -1,15 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
 {% set page_title = "Cache Management" %}
 
 {% block content %}
-    <h1>{{ page_title }}</h1>
+    <div class="nav--page">
+        <h1>{{ page_title }}</h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('admin') }}">Back to Admin Dashboard</a>
+        </p>
+    </div>
 
     <ul class="button-list trailer">
-        <li>
-            <a class="btn" href="{{ urlFor('admin') }}">Admin Dashboard</a>
-        </li>
         <li>
             <form method="post">
                 <input name="cache_type" type="hidden" value="doctrine">
