Add credential pages

--- a/templates/credentials/credential.add.twig
+++ b/templates/credentials/credential.add.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
 {% set page_title = 'Add Credential' %}
@@ -51,7 +51,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Add Credential"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('admin.credentials') }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('admin.credentials') }}">Cancel</a></li>
             </ul>
 
         </form>
