--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 
 {% set page_title = "Credentials" %}
 
-{% set isSuper = isUserSuper(getCurrentUser()) %}
+{% set isSuper = isUserSuper(current_user) %}
 
 {% block content %}
     <h1>{{ page_title }}</h1>
@@ -30,7 +30,7 @@
                 {% for credential in credentials %}
                     <tr>
                         <td>
-                            <a href="{{ urlFor('admin.credential', {'credential': credential.id }) }}">{{ credential.id[:7] }}</a></td>
+                            <a href="{{ uriFor('admin.credential', {'credential': credential.id }) }}">{{ credential.id[:7] }}</a></td>
                         <td>
                             {% if credential.type == 'aws' %}
                                 AWS
@@ -57,7 +57,7 @@
 
     {% if isSuper %}
         <ul class="button-list button-list--half">
-            <li><a class="btn" href="{{ urlFor('admin.credential.add') }}">Add Credentials</a></li>
+            <li><a class="btn" href="{{ uriFor('admin.credential.add') }}">Add Credentials</a></li>
         </ul>
     {% endif %}
 
