--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
 {% set page_title = 'Credential : ' ~ credential.name %}
 
-{% set isSuper = isUserSuper(getCurrentUser()) %}
+{% set isSuper = isUserSuper(current_user) %}
 
 {% block content %}
 
@@ -55,7 +55,7 @@
     {% endif %}
 
     <h3>Application Deployments</h3>
-    {% if deployments %}
+    {% if targets %}
         <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
             <thead>
                 <tr>
@@ -66,34 +66,34 @@
                 </tr>
             </thead>
             <tbody>
-            {% for deployment in deployments %}
+            {% for target in targets %}
 
                 <tr>
                     <td>
-                        <a href="{{ urlFor('application', {application: deployment.application.id}) }}">{{ deployment.application.name }}</a>
+                        <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
                     </td>
                     <td>
-                        {{ deployment.server.environment.name }}
+                        {{ target.server.environment.name }}
                     </td>
                     <td>
-                        {{ deployment.formatPretty(true) }}
+                        {{ target.formatPretty(true) }}
                     </td>
                     <td class="tr">
-                        <a class="btn btn--tiny" href="{{ urlFor('deployment', {application: deployment.application.id, deployment: deployment.id}) }}">View</a>
+                        <a class="btn btn--tiny" href="{{ uriFor('target', {'application': target.application.id, 'target': target.id}) }}">View</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     {% else %}
-        <p>There are no deployments associated with these credentials.</p>
+        <p>There are no deployment targets associated with these credentials.</p>
     {% endif %}
 
     <ul class="button-list button-list--half">
-        <li><a class="btn" href="{{ urlFor('admin.credentials') }}">All Credentials</a></li>
+        <li><a class="btn" href="{{ uriFor('admin.credentials') }}">All Credentials</a></li>
 
         {% if isSuper %}
-                <li class="button-list__fixed"><a class="btn btn--destructive" href="{{ urlFor('admin.credential.remove', {credential: credential.id}) }}">Remove Credentials</a></li>
+                <li class="button-list__fixed"><a class="btn btn--destructive" href="{{ uriFor('admin.credential.remove', {'credential': credential.id}) }}">Remove Credentials</a></li>
         {% endif %}
     </ul>
 
