--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -24,7 +24,7 @@
         <li><a class="btn" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Application Status</a></li>
 
         <li><a class="btn btn--secondary" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Encrypted Properties</a></li>
-        <li><a class="btn btn--secondary" href="{{ uriFor('deployments', {'application': application.id}) }}">Deployment Targets</a></li>
+        <li><a class="btn btn--secondary" href="{{ uriFor('targets', {'application': application.id}) }}">Deployment Targets</a></li>
     </ul>
 
     {% if canEdit or canRemove %}
