--- a/templates/target-view/pool.add.twig
+++ b/templates/target-view/pool.add.twig
@@ -1,23 +1,23 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "macros.form.twig" as form_macros %}
 
-{% set page_title = 'Add Deployment Pool : ' ~ view.name %}
+{% set page_title = 'Add Target Pool : ' ~ view.name %}
 
 {% block content %}
-    <h1>Add Deployment Pool - <strong>{{ view.name }}</strong> </h1>
+    <h1>Add Target Pool - <strong>{{ view.name }}</strong> </h1>
 
     <div class="details-box">
         <dl class="split mbn">
             <dt class="split__title">Application</dt>
             <dd>
-                <a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a>
+                <a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a>
             </dd>
 
             <dt class="split__title">Environment</dt>
             <dd>{{ environment.name }}</dd>
 
-            <dt class="split__title">Deployment View</dt>
-            <dd><a href="{{ urlFor('deployment_view', {'view': view.id}) }}">{{ view.name }}</a></dd>
+            <dt class="split__title">Target View</dt>
+            <dd><a href="{{ uriFor('target_view', {'application': application.id, 'view': view.id}) }}">{{ view.name }}</a></dd>
         </dl>
     </div>
 
@@ -34,8 +34,8 @@
             </ul>
 
             <ul class="button-list">
-                <li><input class="btn btn--action" type="submit" value="Add Deployment Pool"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('deployment_view', {'view': view.id}) }}">Cancel</a></li>
+                <li><input class="btn btn--action" type="submit" value="Add Target Pool"></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('target_view', {'application': application.id, 'view': view.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
