--- a/templates/target-view/view.add.twig
+++ b/templates/target-view/view.add.twig
@@ -1,16 +1,16 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "macros.form.twig" as form_macros %}
 
-{% set page_title = 'Add Deployment View : ' ~ application.name %}
+{% set page_title = 'Add Target View : ' ~ application.name %}
 
 {% block content %}
-    <h1>Add Deployment View - <strong>{{ application.name }}</strong> </h1>
+    <h1>Add Target View - <strong>{{ application.name }}</strong> </h1>
 
     <div class="details-box">
         <dl class="split mbn">
             <dt class="split__title">Application</dt>
             <dd>
-                <a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a>
+                <a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a>
             </dd>
 
             <dt class="split__title">Environment</dt>
@@ -41,8 +41,8 @@
             </ul>
 
             <ul class="button-list">
-                <li><input class="btn btn--action" type="submit" value="Add Deployment View"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('pools', {'application': application.id, 'environment': environment.id}) }}">Cancel</a></li>
+                <li><input class="btn btn--action" type="submit" value="Add Target View"></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('target_views', {'application': application.id, 'environment': environment.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
