--- a/templates/target-view/view.edit.twig
+++ b/templates/target-view/view.edit.twig
@@ -1,16 +1,16 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "macros.form.twig" as form_macros %}
 
-{% set page_title = 'Edit Deployment View : ' ~ view.name %}
+{% set page_title = 'Edit Target View : ' ~ view.name %}
 
 {% block content %}
-    <h1>Edit Deployment View - <strong>{{ view.name }}</strong> </h1>
+    <h1>Edit Target View - <strong>{{ view.name }}</strong> </h1>
 
     <div class="details-box">
         <dl class="split mbn">
             <dt class="split__title">Application</dt>
             <dd>
-                <a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a>
+                <a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a>
             </dd>
 
             <dt class="split__title">Environment</dt>
@@ -45,7 +45,7 @@
                     <input name="name" id="name" maxlength="100" required value="{{ form.name }}" class="text-input">
                 </li>
                 <li>
-                    {% set isChecked = ('1' == form.shared) %}
+                    {% set isChecked = form.shared %}
                     <label for="shared">
                         <input type="checkbox" name="shared" id="shared" value="1"{{ isChecked ? ' checked' : '' }}{{ view.user or not isChecked ? '' : ' disabled' }}> Shared?
                     </label>
@@ -57,14 +57,14 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('deployment_view', {'view': view.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('target_view', {'application': application.id, 'view': view.id}) }}">Cancel</a></li>
             </ul>
         </form>
     </div>
 
     <p class="leader--andre">Removing this view will also remove any pools and deployments attached to it.</p>
     <p>
-        <a class="btn btn--destructive" href="{{ urlFor('deployment_view.remove', {'view': view.id}) }}">Remove View</a>
+        <a class="btn btn--destructive" href="{{ uriFor('target_view.remove', {'application': application.id, 'view': view.id}) }}">Remove View</a>
     </p>
 
 {% endblock %}
