--- a/templates/target-view/view.twig
+++ b/templates/target-view/view.twig
@@ -1,24 +1,31 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 
-{% set page_title = 'Deployment View : ' ~ view.name %}
+{% set page_title = 'Target View : ' ~ view.name %}
 
 {% set js_components = ["pool.add"] %}
 
-{% set isAdmin = isUserAdminOrSuper(getCurrentUser()) or isUserLeadOf(getCurrentUser(), application) %}
+{% set isAdmin = isUserAdminOrSuper(current_user) or isUserLeadOf(current_user, application) %}
 {% if view.user %}
-    {% set canEdit = isAdmin or getCurrentUser() == view.user %}
+    {% set canEdit = isAdmin or current_user == view.user %}
 {% else %}
-    {% set canEdit = isAdmin or canUserBuild(getCurrentUser(), application) %}
+    {% set canEdit = isAdmin or canUserBuild(current_user, application) %}
 {% endif %}
 
 {% block content %}
-    <h1>Deployment View - <strong>{{ view.name }}</strong> </h1>
+
+    <div class="nav--page">
+        <h1>Target View - <strong>{{ view.name }}</strong></h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('target_views', {'application': application.id, 'environment': environment.id}) }}">Back to Target Views</a>
+        </p>
+    </div>
 
     <div class="details-box">
         <dl class="split mbn">
             <dt class="split__title">Application</dt>
             <dd>
-                <a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a>
+                <a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a>
             </dd>
 
             <dt class="split__title">Environment</dt>
@@ -36,7 +43,7 @@
             <dd>
                 {% if view.user %}
                     This view is owned by <b>{{ view.user.name }}</b>.
-                    <br>Only administrators, leads, and this user can make changes.
+                    <br>Only administrators, owners, and this user can make changes.
                 {% else %}
                     This view is <b>shared</b>.
                     <br>Any user with build permissions can make changes.
@@ -49,9 +56,9 @@
 
     {% if pools %}
 
-        <p>When displayed, pools will always be sorted alphabetically. Servers within pools will be sorted using Quicken Loans&trade; Super Advanced&trade; algorithms.</p>
+        <p>When displayed, pools will always be sorted alphabetically.</p>
 
-        <p><b>Please note:</b> Deployments can only belong to a single view.</p>
+        <p><b>Please note:</b> Targets can only belong to a single pool.</p>
 
         <ul class="list--bare cards--dual">
             {% for pool in pools %}
@@ -61,7 +68,7 @@
                             <span class="split__title">{{ pool.name }}</span>
 
                             {% if canEdit %}
-                                <a href="{{ urlFor('pool.edit', {'view': view.id, 'pool': pool.id}) }}">Edit</a>
+                                <a href="{{ uriFor('target_pool.edit', {'application': application.id, 'view': view.id, 'pool': pool.id}) }}">Edit</a>
                             {% endif %}
                         </header>
 
@@ -81,7 +88,7 @@
 
                                             </span>
                                             {% if canEdit %}
-                                                <a class="js-remove-deployment" href="{{ urlFor('pool.deployment.remove', {view: view.id, pool: pool.id, deployment: deployment.id}) }}">Remove</a>
+                                                <a class="js-remove-deployment" href="{{ uriFor('target_pool_target.remove', {'application': application.id, 'view': view.id, 'pool': pool.id, 'target': deployment.id}) }}">Remove</a>
                                             {% endif %}
                                         </li>
                                     {% endfor %}
@@ -93,7 +100,7 @@
                             </ul>
 
                             {% if canEdit and deployments %}
-                                <form class="mtm js-pool-form" method="post" action="{{ urlFor('pool.deployment.add', {'view': view.id, 'pool': pool.id}) }}">
+                                <form class="mtm js-pool-form" method="post" action="{{ uriFor('target_pool_target.add', {'application': application.id, 'view': view.id, 'pool': pool.id}) }}">
                                     <select class="select-input" name="deployment">
                                         <option></option>
                                         {% for deployment in deployments %}
@@ -108,7 +115,7 @@
                                     </select>
 
                                     <p class="mbs mts">
-                                        <input class="btn btn--action btn--tiny" type="submit" value="Add Deployment">
+                                        <input class="btn btn--action btn--tiny" type="submit" value="Add Deployment Target">
                                     </p>
                                 </form>
                             {% endif %}
@@ -124,12 +131,11 @@
 
     <ul class="button-list">
         {% if canEdit %}
-            <li><a class="btn btn--action" href="{{ urlFor('pool.add', {view: view.id}) }}">Add Pool</a></li>
-            <li><a class="btn btn--action" href="{{ urlFor('deployment_view.edit', {view: view.id}) }}">Edit View</a></li>
+            <li><a class="btn btn--action" href="{{ uriFor('target_pool.add', {'application': application.id, 'view': view.id}) }}">Add Pool</a></li>
+            <li><a class="btn btn--action" href="{{ uriFor('target_view.edit', {'application': application.id, 'view': view.id}) }}">Edit View</a></li>
         {% endif %}
 
-        <li><a class="btn" href="{{ urlFor('pools', {'application': application.id, 'environment': environment.id}) }}">Deployment Pools</a></li>
-        <li><a class="btn" href="{{ urlFor('application.dashboard', {'application': application.id}) }}">Application Status</a></li>
+        <li><a class="btn" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Application Status</a></li>
     </ul>
 
 {% endblock %}
